database with files

--- a/templates/LDashboard.html
+++ b/templates/LDashboard.html
@@ -237,7 +237,7 @@
                                             {% for application in applications %}
                                             <td>
                                                 <div class="ckbox ckbox-theme">
-                                                    <input id="checkbox1" type="checkbox" checked="checked" class="mail-checkbox">
+                                                    <input id="checkbox1" type="checkbox" class="mail-checkbox">
                                                     <label for="checkbox1"></label>
                                                 </div>
                                             </td>
