--- a/templates/settigns.html
+++ b/templates/settigns.html
@@ -13,7 +13,7 @@
     <form method="POST">
     <div class="mainSettings">
             <div class="settingmodel-mysettings">
-                <input class="settingmodel-close"type="button" value="&times;" name="close">
+                <input class="settingmodel-close"type="submit" value="&times;" name="close">
                 <div><h3 id="settingTit"><strong>Change Password</strong></h3></div>
                 <div class="setrow">
                     <label class="lab"><strong>Username</strong></label>
